[package]
name = "urlendec"
description = "A command-line url encoder/decoder"
version = "0.1.1"
edition = "2021"
homepage = "https://github.com/cobalt-forge/urlendec"
repository = "https://github.com/cobalt-forge/urlendec"
license = "MIT"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
urlencoding = "2.0"
env_logger = "0.10.0"
log = "0.4.17"

[dev-dependencies]
assert_cmd = "2.0.8"
predicates = "2.1.5"
assert_fs = "1.0.10"
